# slab

./: BLUEPRINT.md  Cargo.toml  DESIGN.md  README.md
frontend/: design.css  index.html  shell.css  shell.js
frontend/apps/bookmarks/: README.md
frontend/apps/editor/: editor.js  manifest.json
frontend/apps/files/: README.md  files.js  manifest.json
frontend/apps/logs/: README.md  logs.js  manifest.json
frontend/apps/media/: manifest.json  media.js
frontend/apps/media-controls/: README.md
frontend/apps/notes/: README.md  manifest.json  notes.js
frontend/apps/services/: README.md  manifest.json  services.js
frontend/apps/settings/: manifest.json  settings.js
frontend/apps/sysmon/: manifest.json  sysmon.js
frontend/apps/terminal/: README.md  manifest.json  terminal.js
frontend/apps/timer/: README.md
frontend/apps/xbridge/: README.md  manifest.json  xbridge.css  xbridge.js
src/: apps.rs  config.rs  files.rs  main.rs  media.rs  setup.rs  shell.rs  state.rs  sysmon.rs  terminal.rs  theme.rs  xbridge.rs
