[package]
name = "slab-base"
version = "0.1.0"
edition = "2024"

[dependencies]
# Wayland compositor framework
smithay = { version = "0.7", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "backend_winit",
    "backend_egl",
    "desktop",
    "renderer_gl",
    "wayland_frontend",
    "xwayland",
] }

# Extra DRM helpers
smithay-drm-extras = "0.1"

# Event loop
calloop = { version = "0.14", features = ["futures-io"] }

# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
libc = "0.2"
